Fix layout issue

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ select {
 
 .grid-layout {
   display: grid;
+  justify-content: center;
   grid-template-columns:
     4px
     repeat(3, calc((100% - (16px * 2) - (12px * 2)) / 3))
@@ -129,9 +130,9 @@ select {
 @media screen and (min-width: 1440px) {
   .grid-layout {
     grid-template-columns:
-      153px
-      repeat(12, calc((100% - (165px * 2) - (12px * 11)) / 12))
-      153px;
+      1fr
+      repeat(12, calc((75rem - (12px * 11)) / 12))
+      1fr;
   }
 }
 
